- leak:
  - added param -t to set sockets timeout
- enumerate:
  - added param -t to set sockets timeout
-	exten:
  - added param -t to set sockets timeout
- ping:
  - added param -t to set sockets timeout
- rcrack:
  - added param -t to set sockets timeout
- send:
  - added param -t to set sockets timeout
- tshark:
  - added param -rtp_extract to extract RTP frames info WAV files
- global:
  - bug fixes

v4.0 (May/2024):
- Unify scripts into one: sippts
- bug fixes
- Deleted script sipfuzzer
- added param -cve in scan script to show possible CVEs
- added param -up for update scripts and cve file

v3.4 (Feb/2024):
- added param -ppi for P-Preferred-Identity
- added param -pai for P-Asserted-Identity
- sipsend:
  - added param --local_port to force local port
  - added param --no_contact to send message without contact header
- sipinvite: added param --local_port to force local port
- sipexten:
  - added param -ofile to save results
  - added param -f to filter response code
- sipsend:
  - added param -header to insert custom headers
- global:
  - bug fixes
- Renamed script sipdump to sippcapdump
- Renamed script sipcrack to sipdigestcrack

v3.3 (Nov/2022):
- sipflood:
  - added param -th to allow threads
  - added params -b -a -min -max to create malformed headers
- sipscan:
  - manage large ranges of IP networks. Fixed memory leak problems
  - can now run faster. Supports 800 threads without memory consumption
  - added param -random to randomize target hosts
- sipdigestleak
  - now can attack several IP addresses or network ranges
  - added param -ping to ping the host and connect to them only if it is alive
  - added param --file lo load IPs from a file, with format (ip:port/proto)
- sipenumerate:
  - use threads to run faster
  - show fingerprinting to give more information
- sipping:
  - new module to check if a server/device is alive
- rtpbleedinject:
  - new module to inject RTP frames when RTPBleed vulnerability is present
- wssend: